# cutangent

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.github/workflows/: keep-alive.yml  linux_gpu_tests.yml  release.yml  ubuntu_build.yml  windows_gpu_tests.yml  wsl_gpu_tests.yml
cmake/: warnings.cmake
examples/: CMakeLists.txt  common.h
examples/basic/: CMakeLists.txt  basic.cu  basic_v.cu  basic_v_seed.cu
examples/finance/: CMakeLists.txt  blackscholes.cu
examples/formatting/: CMakeLists.txt  formatting.cu
examples/interval/: CMakeLists.txt  centered.cu  interval.cu  natural.cu
examples/mccormick/: CMakeLists.txt  mccormick.cu  mccormick.cu.bak  mccormick_v.cu
examples/montecarlo/: CMakeLists.txt  mc.cu  mc_heston.cu  mc_heston_bak.cu  mc_heston_dist.cu  mc_heston_plain.cu  mc_heston_relaxed.cu  mc_heston_tangent.cu
examples/vector/: CMakeLists.txt  basic_v.cu  basic_v_seed.cu  basic_v_seed_graph.cu
include/cutangent/: cutangent.cuh  format.h  limits.h  numbers.h  tangent.h  tangents.h  vtangent.h
include/cutangent/arithmetic/: basic.cuh  basic_v.cuh  intrinsic.cuh  intrinsic_v.cuh
src/: CMakeLists.txt  main.cu
tests/: CMakeLists.txt  tests.cpp  tests_against_finite_differences.cu  tests_against_finite_differences.h  tests_common.h
tests/header-only/multi-header/: CMakeLists.txt  multi_header.cu
tests/header-only/single-header/: .gitignore  CMakeLists.txt  project_header.cu  system_header.cu
tools/: bump-version.sh  memcheck.sh  profile.sh  racecheck.sh  single-header.py  synccheck.sh  unusedcheck.sh
