add_executable(basic basic.cu)
target_compile_features(basic PRIVATE cxx_std_20 cuda_std_20)
set_target_properties(basic PROPERTIES CUDA_ARCHITECTURES native)
target_compile_options(basic PUBLIC "$<$<COMPILE_LANGUAGE:CUDA>:--expt-relaxed-constexpr>")
target_link_libraries(basic PRIVATE ${PROJECT_NAME})

add_executable(basic_v basic_v.cu)
target_compile_features(basic_v PRIVATE cxx_std_20 cuda_std_20)
set_target_properties(basic_v PROPERTIES CUDA_ARCHITECTURES native)
target_compile_options(basic_v PUBLIC "$<$<COMPILE_LANGUAGE:CUDA>:--expt-relaxed-constexpr>")
target_link_libraries(basic_v PRIVATE ${PROJECT_NAME})

add_executable(basic_v_seed basic_v_seed.cu)
target_compile_features(basic_v_seed PRIVATE cxx_std_20 cuda_std_20)
set_target_properties(basic_v_seed PROPERTIES CUDA_ARCHITECTURES native)
target_compile_options(basic_v_seed PUBLIC "$<$<COMPILE_LANGUAGE:CUDA>:--expt-relaxed-constexpr>")
target_link_libraries(basic_v_seed PRIVATE ${PROJECT_NAME})
